--- a/src/styles/personalStats.css
+++ b/src/styles/personalStats.css
@@ -6,7 +6,7 @@
     flex-direction: column;
     justify-content: space-between;
     top: 3rem;
-    left: 3rem;
+    left: 5rem;
 }
 
 h1 {
